# boursomatic

./: .gitignore  INTRADAY_IMPLEMENTATION.md  LICENSE  PHASE_2.2_SUMMARY.md  README.md  seed_intraday_checkpoint.json
.github/: CI_CD_SUMMARY.md  IMPLEMENTATION_NOTES.md
.github/workflows/: README.md  backend-ci.yml  deploy-staging.yml  docker-build.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  INSTALLATION.md  README.md  TRAIN_README.md  alembic.ini  demo_train.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration_train.py  train.py
backend/alembic/: env.py
backend/alembic/versions/: 168e12fdbaea_initial_schema_users_user_settings_.py
backend/app/: DATA_PROVIDER_README.md  FEATURES_README.md  __init__.py  data_provider.py  database.py  features.py  main.py  models.py
backend/docs/: PHASE_0.2_SUMMARY.md  QUICKSTART.md  database_schema.md  schema.sql  schema_diagram.txt
backend/examples/: data_provider_example.py
backend/scripts/: db_migration.sh  test_schema.py
backend/tests/: __init__.py  test_data_provider.py  test_features.py  test_intraday_ingestion.py  test_main.py  test_seed_prices.py  test_train.py
frontend/: README.md
infra/: README.md
infra/docs/: ARCHITECTURE.md  CI_CD.md  GCP_SETUP.md  PHASE_0.3_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECRETS.md  SETUP_CHECKLIST.md
infra/scheduler/: README.md  intraday_job.yaml
infra/scripts/: build-push-image.sh  check-prerequisites.sh  (+1 more)
scripts/: README.md  cron_intraday.sh  demo_features.py  seed_prices.py  seed_prices_intraday.py  test_features.py
(+23 files in other folders)
